fixed home page align

--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -1,16 +1,19 @@
 .contact__header{
-    background-image: url('../img/newBanner.jpg');
+    background-image: url('../img/defcover.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 310px;
-    object-fit: contain;
+    height: 500px;
+    background-attachment: fixed;
+    background-color: transparent;
+    background-position: 50% 50%;
 }
 .contact__header h1{
     color: white;
     padding-top: 50px;
     font-size: 48px;
-    text-align: center;
+    text-align: start;
+    padding-left: 100px;
 }
 .rowContact{
     padding: 100px 0 ;
@@ -22,6 +25,21 @@
 .col-2 .subtitle{
     font-size: 18px;
     color: rgb(70, 70, 70);
+}
+#contactusheader{
+    margin-bottom: 20px;
+}
+#subhead{
+    font-size: 18px;
+    color: #a5d83c;
+    text-align: start;
+    font-weight: bold;
+    padding-left: 100px;
+    margin-top: 10px;
+    width: 450px;
+}
+#subhead1{
+    margin-top: 70px;
 }
 .paragraphs{
     color: gray;
