--- a/src/css/Suplements.css
+++ b/src/css/Suplements.css
@@ -1,7 +1,6 @@
 .container {
     width: 100%;
     height: auto;
-    padding: 10px;
     display: flex;
     flex-direction: column;
 }
